@@ -1501,7 +1501,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches do not keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '230';
+$wgStyleVersion = '233x';
 
 
 # Server-side caching:
